--- a/style.css
+++ b/style.css
@@ -27,12 +27,12 @@
   background-position: left 11px center;
 }
 .adress-input {
-  width: 690px;
-
+  flex: 0.8;
   background-image: url(images/home.svg);
 }
 .input-search {
   background-image: url(images/search.jpg);
+  margin-left: auto;
   width: 300px;
 }
 .buttons {
@@ -58,6 +58,9 @@
   color: #ffffff;
   margin-right: 10px;
 }
+.button-card-text {
+  margin-right: 10px;
+}
 .button-icon {
   margin-right: 6px;
   vertical-align: middle;
@@ -72,7 +75,7 @@
 }
 .promo {
   filter: drop-shadow(0px 7px 12px rgba(158, 158, 163, 0.1));
-  background: #fff1b8 url(images/promoimg.jpg) no-repeat top right -400px;
+  background: #fff1b8 url(images/pizza.png) no-repeat top right -450px;
   border-radius: 10px;
   padding: 68px 70px;
   margin-bottom: 56px;
@@ -89,7 +92,6 @@
 .section-heading {
   display: flex;
   align-items: center;
-  justify-content: space-between;
   margin-bottom: 44px;
 }
 .section-title {
@@ -100,6 +102,7 @@
   line-height: 42px;
   margin: 0;
   color: #000000;
+  margin-right: 30px;
 }
 .card {
   background: #ffffff;
@@ -107,6 +110,8 @@
   border-radius: 7px;
   overflow: hidden;
   margin-bottom: 30px;
+  flex-basis: 31%;
+  text-decoration: none;
 }
 .cards {
   display: flex;
@@ -139,6 +144,15 @@
   line-height: 32px;
   color: #000000;
 }
+.card-title-reg {
+  font-weight: 400;
+  font-family: Roboto;
+}
+.ingredients {
+  font-size: 18px;
+  line-height: 21px;
+  color: #8c8c8c;
+}
 .card-tag {
   font-family: SF Pro Display;
   font-style: normal;
@@ -155,6 +169,25 @@
 .card-info {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
+}
+.card-info-p {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-bottom: -10px;
+}
+.card-buttons {
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+}
+.card-price-bold {
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 32px;
+  margin-left: 30px;
+  font-family: Roboto;
 }
 .rating {
   margin-right: 26px;
@@ -177,6 +210,12 @@
 .price {
   margin-right: 10px;
 }
+.category {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  max-width: 150px;
+}
 .price::after {
   content: "";
   width: 5px;
@@ -186,4 +225,195 @@
   vertical-align: middle;
   border-radius: 50%;
   margin-left: 10px;
+}
+.restaurants {
+  background: linear-gradient(
+    180deg,
+    rgba(245, 245, 245, 0) 1.04%,
+    #f5f5f5 100%
+  );
+}
+.main {
+  background: linear-gradient(
+    180deg,
+    rgba(245, 245, 245, 0) 1.04%,
+    #f5f5f5 100%
+  );
+}
+.footer {
+  padding: 60px 0;
+}
+.footer-block {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.footer-nav {
+  margin-left: 35px;
+  margin-right: auto;
+}
+.footer-link {
+  display: inline-block;
+  color: #595959;
+  text-decoration: none;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 21px;
+}
+.footer-link:not(:last-child) {
+  margin-right: 15px;
+}
+.social-links {
+  display: flex;
+  align-items: center;
+}
+.social-link:not(:last-child) {
+  margin-right: 21px;
+}
+@media (max-width: 1366px) {
+  .container {
+    max-width: 960px;
+  }
+  .promo {
+    background-position: center right -280px;
+    background-size: 800px;
+  }
+  .ingredients {
+    text-overflow: ellipsis;
+  }
+}
+@media (max-width: 992px) {
+  .container {
+    max-width: 750px;
+  }
+  .promo {
+    padding: 50px;
+    background-size: 500px;
+    background-position: center right -200px;
+  }
+  .promo-text {
+    font-size: 18px;
+    max-width: 400px;
+  }
+  .card {
+    flex-basis: 49%;
+  }
+  .footer-link {
+    font-size: 16px;
+  }
+  .ingredients {
+    text-overflow: ellipsis;
+  }
+  .card-title-reg {
+    font-size: 24px;
+  }
+}
+@media (max-width: 768px) {
+  .container {
+    max-width: 560px;
+  }
+  .card-info {
+    flex-wrap: wrap;
+  }
+  .card.rating {
+    flex-basis: 100%;
+  }
+  .card-title {
+    font-size: 18px;
+  }
+  .promo-title {
+    font-size: 24px;
+    line-height: 1.4;
+  }
+  .promo-text {
+    margin-top: 0;
+  }
+  .promo {
+    background-size: 400px;
+    background-position: bottom 50px right -200px;
+  }
+  .ingredients {
+    text-overflow: ellipsis;
+  }
+}
+@media (max-width: 578px) {
+  .container {
+    width: 90%;
+  }
+  .header {
+    flex-wrap: wrap;
+  }
+  .adress-input {
+    order: 5;
+    margin-top: 15px;
+    flex: 1;
+  }
+  .promo {
+    background-image: none;
+  }
+  .promo-title {
+    margin-bottom: 10px;
+  }
+  .section-title {
+    font-size: 20px;
+  }
+  .card {
+    flex-basis: 100%;
+  }
+  .card-image {
+    width: 100%;
+  }
+  .footer-nav {
+    order: 0;
+  }
+  .footer-logo {
+    order: 1;
+  }
+  .social-links {
+    order: 2;
+  }
+  .footer {
+    padding: 30px 0;
+  }
+  .footer-block {
+    align-items: flex-start;
+  }
+  .ingredients {
+    text-overflow: ellipsis;
+  }
+}
+@media (max-width: 488px) {
+  .button-text {
+    display: none;
+  }
+  .button {
+    min-height: 40px;
+  }
+  .button-icon {
+    margin: 0;
+  }
+  .promo {
+    padding: 20px;
+  }
+  .section-heading {
+    flex-wrap: wrap;
+  }
+  .footer-block {
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+  }
+  .footer-logo {
+    order: 0;
+    margin-bottom: 20px;
+  }
+  .footer-nav {
+    padding-bottom: 20px;
+    text-align: center;
+  }
+  .footer-link {
+    margin-left: 0;
+  }
 }
